# tasho_orocos

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: joint_state_publisher.py  yumi.rviz  yumi_visualization.launch
robots/: yumi.urdf.xacro
scripts/: deployMPC.lua  deploy_homing.lua  deploy_p2p.lua  deploy_pick_place_fsm.lua  deploypOCP.lua  fsm_seq.lua  simple_robot_sim.lua  vel_traj_follow.lua
scripts/rfsm/: fsm_component.lua  fsm_seq.lua
src/: CMakeLists.txt  HOMINGComponent.cpp  HOMINGComponent.hpp  MPCComponent.cpp  MPCComponent.hpp  OCPComponent.cpp  OCPComponent.hpp
